--- a/manifests/brewz/virtual-server.yaml
+++ b/manifests/brewz/virtual-server.yaml
@@ -38,6 +38,16 @@ spec:
         - name: rate-limit-policy
       action:
         pass: api
+      errorPage:
+        - codes: [404]
+          return:
+            code: 404
+            type: application/json
+            body: |
+              {\"msg\": \"Could not find the resource!\"}
+            headers:
+              - name: x-debug-original-status
+                value: ${upstream_status}
     - path: /api/inventory
       action:
         proxy:
